violating_resources/anthos-service-mesh/port-naming/samples/port-name-constraint/example_allowed_included_prefix.yaml
apiVersion: v1
kind: Service
metadata:
  name: port-name-http
  labels:
    app: helloworld
spec:
  ports:
    - port: 5000
      name: http-helloport
  selector:
    app: helloworld
