violating_resources/anthos-service-mesh/port-naming/samples/port-name-constraint/example_disallowed_no_prefix.yaml
apiVersion: v1
kind: Service
metadata:
  name: port-name-bad
  labels:
    app: helloworld
spec:
  ports:
    - port: 5000
      name: helloport
  selector:
    app: helloworld
