violating_resources/anthos-service-mesh/port-naming/samples/port-name-constraint/example_disallowed_wrong_prefix.yaml
apiVersion: v1
kind: Service
metadata:
  name: port-name-tcp
  labels:
    app: helloworld
spec:
  ports:
    - port: 5000
      name: foo-helloport
  selector:
    app: helloworld
